--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
     sizes="114x114"
     href="img/apple-touch-icon-114x114.png"
   />
+  
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
   <link
     rel="stylesheet"
     type="text/css"
